--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,7 +36,7 @@ android {
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation 'androidx.legacy:legacy-support-v13:1.0.0'
         implementation "androidx.annotation:annotation:1.7.1"
-        implementation 'com.google.android.gms:play-services-location:21.1.0'
+//        implementation 'com.google.android.gms:play-services-location:21.1.0'
 
     }
 }
