--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -2,13 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xamdesign.safe_device">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+<!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
+<!--    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
 
     <application>
-        <activity
-            android:name=".MockLocation.MainActivityvvvv"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".MockLocation.MainActivityvvvv"-->
+<!--            android:exported="false" />-->
     </application>
 
 </manifest>
